--- a/Pages/SignUp.cshtml
+++ b/Pages/SignUp.cshtml
@@ -3,9 +3,42 @@
 @{
     ViewData["Title"] = "Страница регистрации";
 }
+@section scripts {
+    <script>
+        document.addEventListener('DOMContentLoaded', function ()
+        {
+            var errorMessage = "@ViewData["ErrorMessage"]";
+            if (errorMessage !== "")
+            {
+                $('#myModal').modal('show');
+                // Очистить поля пароля и подтверждения пароля
+                $('#password').val('');
+                $('#confirmPassword').val('');
+            }
+        });
+    </script>
+}
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ошибка</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                @ViewData["ErrorMessage"]
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="text-center mt-5">
-
     <h1 class="mt-4 mb-3">Зарегистрироваться</h1>
 
     <form class="card" style="width:500px; margin: auto;padding: 50px;margin-top:50px; margin-bottom: 100px;"
