--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -42,7 +42,8 @@
         {
             <div class="latest-car">
                 <img src="@car.IconPreview" alt="Car Image" class="img-fluid">
-                <h4 class="mt-2">@car.CarBrand</h4>
+                <h6 class="mt-2">@car.CarBrand.Name @car.Model</h6>
+                <p>@(car.Price.ToString("N0")) р.</p>
                 <a href="#" class="btn btn-primary mt-2">Подробнее</a>
             </div>
         }
