--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Car">Каталог</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/CarCatalog">Каталог</a>
                         </li>
                     </ul>
 
