--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -111,3 +111,38 @@ li {
 .form-group {
   margin-bottom: 20px;
 }
+
+/* CAR BRAND */
+.brand-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.brand-card {
+  width: 15%;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.brand-icon {
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
+
+.brand-info {
+  font-weight: bold;
+}
+
+.brand-name {
+  font-size: 20px;
+}
+
+.brand-country {
+  /* Стили для страны производства */
+}
