--- a/Pages/Cars/Details.cshtml
+++ b/Pages/Cars/Details.cshtml
@@ -4,7 +4,7 @@
     var car = ViewData["Car"] as Car;
 }
 
-<h1 class="text-center m-4">Автомобиль: @car.CarBrand.Name @car.Model</h1>
+<h1 class="text-center m-4">Автомобиль: @car.BrandCar.Name @car.ModelCar (@car.TypeCar.Name)</h1>
 
 <hr />
 
