--- a/Pages/CarCatalog.cshtml
+++ b/Pages/CarCatalog.cshtml
@@ -3,8 +3,7 @@
 @{
     var brands = ViewData["brands"] as List<BrandCar>;
 
-    if (brands == null)
-    {
+    if (brands == null) {
         brands = new List<BrandCar>();
     }
 }
